--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -2,7 +2,7 @@
      Desenvolvido por <a href="mailto:rrubens.meirelles@gmail.com">Rubens de Deus Meirelles</a>
 
     <div class="obs">
-        <p>Todas as imagens e descrições utilizadas nesse projeto são reservadas aos seu criados</p>
+        <p>Todas as imagens e descrições utilizadas nesse projeto são de direitos reservados aos seus criadores.</p>
         <p>Conteúdo utilizado para fins didáticos.</p>
     </div>
 </footer>
