--- a/src/views/partials/headerEletronic.mustache
+++ b/src/views/partials/headerEletronic.mustache
@@ -1,5 +1,5 @@
 {{>partials/header}}
-    <div class="drums">
+    <div class="drums-eletronics">
         <ul>
             <li class="{{#menu.all}}active{{/menu.all}}"><a href="/eletronic">Todas</a></li>
             <li class="{{#menu.alesis}}active{{/menu.alesis}}"><a href="/alesis">Alesis</a></li>
