--- a/src/views/pages/acoustic.mustache
+++ b/src/views/pages/acoustic.mustache
@@ -1,16 +1,20 @@
 {{>partials/headerAcoustic}}
     <div class="container">
-        <div class="drums-images">
-            {{#list}}
-                <div class="drum">
-                    <h4 class="title">{{ name }}</h4>
-                    <div class="img-drum">
-                        <img src="images/{{ image }}" alt="">
-                    </div>                
-                    <p class="description">{{ description }}</p>
-                </div>
-            {{/list}}
-        </div>
+        <div class="card">
+            {{#list}}            
+                <div class="card-drums">
+                    <div class="card-title">
+                        <h4 class="title">{{ name }}</h4>
+                    </div>
+                    <div class="card-img">
+                        <img src="images/{{ image }}" alt="" />
+                    </div>
+                    <div class="card-description">
+                        <p class="description">{{ description }}</p>
+                    </div> 
+                </div>            
+            {{/list}}       
+        </div>       
         {{^list}}
             <div class="no-list">
                 <h2>Nenhum item encontrado</h2>
