--- a/src/views/partials/headerAcoustic.mustache
+++ b/src/views/partials/headerAcoustic.mustache
@@ -1,5 +1,5 @@
 {{>partials/header}}
-    <div class="drums">
+    <div class="drums-acoustics">
         <ul>
             <li class="{{#menu.all}}active{{/menu.all}}"><a href="/acoustic">Todas</a></li>
             <li class="{{#menu.pearl}}active{{/menu.pearl}}"><a href="/pearl">Pearl</a></li>
